fixed images cutting off early for a really obvious reason

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: #FBCBC3;
-    padding: 50px 100px 50px 100px;
     border: 10px solid black;
     outline: 5px solid white;
 }
@@ -57,5 +56,5 @@ body {
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    width: 930px;
+    width: 730px;
 }
